<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signin.ObAlarmFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/tv_title"
            style="@style/start_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ob_title_alarm"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sub_title1"
            style="@style/start_sub_title_text"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="44dp"
            android:text="@string/alarm_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TimePicker
            android:id="@+id/tp_alarm_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            app:layout_constraintTop_toBottomOf="@id/tv_sub_title1"
            style="@style/ob_alarm_timepicker"/>

        <TextView
            android:id="@+id/tv_sub_title2"
            style="@style/start_sub_title_text"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/alarm_week"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tp_alarm_time" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_week_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sub_title2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/ob_hint_alarm_choose"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rc_week_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/ob_hint_alarm"
            app:layout_constraintBottom_toTopOf="@id/btn_next"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/all_button"
            android:layout_width="match_parent"
            android:layout_marginBottom="56dp"
            android:enabled="false"
            android:text="@string/ob_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>